--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
 
                     <div class="carousel-inner" id="carousel-images">
                     </div>
-                    <!--
-                    <button class="prec" type="button">precedente</button>
-                    <button class="succ" type="button">successiva</button>
-                    -->
+                    <button class="prec-succ" type="button">precedente</button>
+                    <button class="prec-succ" type="button">successiva</button>
                 </div>
             </div> 
             
             <div class="row">
                 <div class="text-center mt-3">
-                    <div class="btn btn-primary"><a href="#admin">Admin</a></div>
+                    <div class=""><a href="#admin">Admin</a></div>
                 </div>
             </div>
         </div>
@@ -37,11 +35,11 @@
         <div id="admin" class="page">
             <div class="row">
                 <h1 class="text-center">ADMIN</h1>
-                <button class="btn btn-primary add-btn" id="login">login</button>
+                <button class="btn-login" id="login">login</button>
             </div>
 
             <div class="row">
-                <div class="btn btn-primary"><a href="#home">Home</a></div>
+                <div class=""><a href="#home">Home</a></div>
             </div> 
         </div>
 
