--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,6 @@
     </div> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts/index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
